--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   dotted_border: ^2.1.0
   intl: ^0.19.0
   flutter_launcher_icons: ^0.13.1
+  fl_chart: ^0.40.0
 
 
 dev_dependencies:
