--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   intl: ^0.19.0
   flutter_launcher_icons: ^0.13.1
   fl_chart: ^0.40.0
+  http: ^0.13.3
+  file_picker: ^6.1.1
+  open_file: ^3.2.1
 
 
 dev_dependencies:
