--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,11 @@ dependencies:
   http: ^0.13.3
   file_picker: ^6.1.1
   open_file: ^3.2.1
-
+  carousel_slider: ^4.0.0
+  dio: ^5.4.0
+  toggle_switch: ^2.1.0
+  
+  geolocator: ^10.1.0
 
 dev_dependencies:
   flutter_lints: ^3.0.1
