--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,12 +3,13 @@ description: "HKI QUALITY."
 publish_to: 'none' 
 version: 1.0.0+1
 environment:
-  sdk: '3.2.3'
+  sdk: '3.2.5'
 
 dependencies:
   flutter:
     sdk: flutter
-    
+  
+  permission_handler: ^11.2.0
   cupertino_icons: ^1.0.2
   get: 4.6.6
   dotted_border: ^2.1.0
@@ -21,7 +22,6 @@ dependencies:
   carousel_slider: ^4.0.0
   dio: ^5.4.0
   toggle_switch: ^2.1.0
-  
   geolocator: ^10.1.0
 
 dev_dependencies:
