--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   dio: ^5.4.0
   toggle_switch: ^2.1.0
   geolocator: ^10.1.0
+  image_picker: ^0.8.3
+  
 
 dev_dependencies:
   flutter_lints: ^3.0.1
