--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   toggle_switch: ^2.1.0
   geolocator: ^10.1.0
   image_picker: ^0.8.3
-  
+  flutter_pdfview: ^1.0.1
 
 dev_dependencies:
   flutter_lints: ^3.0.1
